--- a/src/styles/buttons/Sort.module.scss
+++ b/src/styles/buttons/Sort.module.scss
@@ -3,7 +3,7 @@
 
 .sort {
   position: relative;
-  z-index: 90;
+  z-index: 5;
 
   &_title {
     display: flex;
