--- a/src/styles/layout/Tag.module.scss
+++ b/src/styles/layout/Tag.module.scss
@@ -19,4 +19,9 @@
     background: rgb(96, 96, 235);
     color: #fff;
   }
+
+  &.excel {
+    background: rgb(16, 124, 65);
+    color: #fff;
+  }
 }
